--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -16,3 +16,9 @@ html,
 body {
   @apply overflow-x-hidden;
 }
+
+.splide__arrow.splide__arrow--next,
+.splide__arrow.splide__arrow--prev {
+  background-color: #ffc700;
+  color: white;
+}
